test/fails/bad_parsing/bad_function11.lgl
int f(not_attribute int x) { // Declaring tag must be in {attribute | varying | uniform}
    return 1;
}

void main() {
    return;
}